--- a/index.html
+++ b/index.html
@@ -1,39 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>btk's homepage</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <div id="headerText">
-            <h1><b>Welcome To My Homepage</b></h1>
-            </div>
-        <div id="Name">
-            <p>Thanarat Kaewloy</p>
-        </div>
-        <img src="image/btk01.jpg" width="550" height="650">
-        <div id="bodyText">
-            <section id="About me">
-                <h2>ชื่อ-นามสกุล : นายธนรัชต  แก้วลอย</h2>
-                <h2>ชื่อเล่น : บอส</h2>
-                <h2>รหัสนักศึกษา : 6609650426</h2>
-                <h2>อาจารย์ที่ปรึกษา : <a href="https://digital.library.tu.ac.th/tu_dc/frontend/Creator/personDc/88139"
-                    >อาจารย์ปกรณ์ ลี้สุทธิพรชัย</a></h2>
-            </section>
-                <section id="contact">
-                    <h1><b><u><i>My Contact</i></u></b></h1>
-                    <h2>Email : thanarat.kae@dome.tu.ac.th</h2>
-                    <p>Phone number : 093-5832122</p>
-                    <h2><a href="html/About me.html">Click here</a></h2>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/stylerespon.css">
+</head>
+<body>
+  <div class="header">
+    <h1>CSTU PASSPORT</h1>
+  </div>
 
-                </section>
-                <Section id="activity">
-                        <h1 style="color: white;"><b><u><i>Activities in University</i></u></b></h1>
-                        <a href="html/Activity1.html">>>Activity1<<</a>
-                        <br>
-                        <a href="html/Activity2.html">>>Activity2<<</a>
+  <div class="row">
+    <div class="col-3 col-s-3 menu">
+      <ul>
+        <li><a href="html/About me.html">About Me</a></li>
+        <li><a href="html/Advisor.html">Advisor</a></li>
+        <li><a href="html/Activity1.html">TU Activity 1</a></li>
+        <li><a href="html/Activity2.html">TU Activity 2</a></li>
+      </ul>
+    </div>
 
-                </Section>
+    <div class="col-6 col-s-9">
+      <div class="middle">
+        <img src="image/btk03.jpg" alt="Profile Image" style="max-width: 50%; height: auto;">
+        <section>
+          <h1>INFORMATION</h1>
+          <p><strong>ชื่อ-นามสกุล : </strong>ธนรัชต แก้วลอย</p>
+          <p><strong>ชื่อเล่น : </strong>บอส</p>
+          <p><strong>วันเกิด : </strong>06/04/2547</p>
+          <p><strong>รหัสนักศึกษา : </strong>6609650426</p>
+        </section>
+      </div>
+    </div>
+
+    <div class="col-3 col-s-12">
+      <div class="aside">
+        <div class="education-header">
+          Education
         </div>
-    </body>
+        <div class="education-details">
+          <img src="image/ST.png" alt="School Logo">
+          <p><strong>ระดับมัธยมศึกษา:</strong></p>
+          <p>โรงเรียนแสงทองวิทยา จ.สงขลา</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="con">
+      <p><strong>Email : </strong>thanarat.boss12@gmail.com</p>
+      <p><strong>Phone : </strong>093-5832122</p>
+      <p><strong>Line : </strong>thanaratboss</p>
+      <p><strong>Instagram : </strong>btkkkkkkkkkkkkkkkkkk</p>
+      <p><strong>Facebook : </strong>Thanarat Kaewloy</p>
+    </div>
+  </div>
+</body>
 </html>
